--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     Login
 </h1>
 <form method='post'>
-    <label>Username</label><input type='text' name="username" value={{text}} >{{name_err}}<br>
+    <label>Username</label><input type='text' name="username" value={{username}} >{{name_err}}<br>
     <label>Password</label><input type='password' name='password'/>{{pword_err}}<br>
     <br>
     <input type="submit">
